--- a/ch06.html
+++ b/ch06.html
@@ -198,13 +198,10 @@
 </ul>
 </li>
 </ul>
-<p><a href="https://github.com/orangeduck/mpc">mpc (Micro Parser Combinators)</a></p>
+<h2 id=""><a class="header" href="#"></a></h2>
 <ul>
-<li>6장 mpc_parse로 mpc_result_t 를 얻어 mpc_ast_print로 출력
-<ul>
+<li>6장 mpc_parse로 mpc_result_t 를 얻어 mpc_ast_print로 출력</li>
 <li>mpc문법: 슬래시(/) 사이에 mpc정규 표현식을 넣어 작성</li>
-</ul>
-</li>
 </ul>
 <h2 id="srcch06zig"><a class="header" href="#srcch06zig">src/ch06.zig</a></h2>
 <pre><code class="language-zig">const std = @import("std");
