--- a/appendix_a_hand_rolled_parser.html
+++ b/appendix_a_hand_rolled_parser.html
@@ -3,7 +3,7 @@
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
-        <title>ch07 - buildyourownlisp-by-zig</title>
+        <title>appendix_a_hand_rolled_parser - buildyourownlisp-by-zig</title>
 
 
         <!-- Custom HTML head -->
@@ -156,7 +156,7 @@
                         <a href="https://github.com/netpyoung/buildyourownlisp-by-zig" title="Git repository" aria-label="Git repository">
                             <i id="git-repository-button" class="fa fa-github"></i>
                         </a>
-                        <a href="https://github.com/netpyoung/buildyourownlisp-by-zig/edit/main/src/ch07.md" title="Suggest an edit" aria-label="Suggest an edit" rel="edit">
+                        <a href="https://github.com/netpyoung/buildyourownlisp-by-zig/edit/main/src/appendix_a_hand_rolled_parser.md" title="Suggest an edit" aria-label="Suggest an edit" rel="edit">
                             <i id="git-edit-button" class="fa fa-edit"></i>
                         </a>
 
@@ -190,210 +190,31 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1 id="ch07"><a class="header" href="#ch07">ch07</a></h1>
+                        <h1 id="appendix_a_hand_rolled_parser"><a class="header" href="#appendix_a_hand_rolled_parser">appendix_a_hand_rolled_parser</a></h1>
 <ul>
-<li><a href="https://www.buildyourownlisp.com/chapter7_evaluation">origin</a>
+<li><a href="https://www.buildyourownlisp.com/appendix_a_hand_rolled_parser">origin</a>
 <ul>
-<li><a href="https://github.com/orangeduck/BuildYourOwnLisp/blob/master/src/evaluation.c">evaluation.c</a></li>
+<li><a href="https://github.com/orangeduck/BuildYourOwnLisp/blob/master/src/hand_rolled_parser.c">hand_rolled_parser.c</a></li>
 </ul>
 </li>
 </ul>
 <h2 id=""><a class="header" href="#"></a></h2>
-<p>파싱된 mpc_ast_t 를 가지고 children을 방문하면서 계산을 함.</p>
-<pre><code class="language-sh">Lispy Version 0.0.0.0.3
-Press Ctrl+c to Exit
-
-lispy&gt; + 5 6
-11
-lispy&gt; - (* 10 10) (+ 1 1 1)
-97
-</code></pre>
-<pre><code class="language-c">typedef struct mpc_ast_t {
-  char* tag;                   // 특정 항목을 구문 분석하는 데 사용된 모든 규칙의 목록을 포함하는 문자열이었습니다. 예를 들어 expr|number|regex.
-  char* contents;              // 가지의 경우 이 필드가 비어 있지만, 잎의 경우 연산자나 숫자를 찾는 데 사용할 수 있습니다.'*''(''5'
-  mpc_state_t state;           // 이 프로그램에서는 이 정보를 사용하지 않습니다. // 파서가 이 노드를 발견했을 때 어떤 상태에 있었는지에 대한 정보(행 번호, 열 번호 등)가 포함됩니다.
-  int children_num;            // 노드의 자식 노드 수
-  struct mpc_ast_t** children; // 자식 노드들의 배열
-} mpc_ast_t;
-</code></pre>
-<h2 id="srcch07zig"><a class="header" href="#srcch07zig">src/ch07.zig</a></h2>
-<pre><code class="language-zig">const std = @import("std");
-const module_builtin = @import("builtin");
-
-const c_libedit = if (module_builtin.os.tag != .windows) @cImport({
-    // https://salsa.debian.org/debian/libedit/-/blob/master/src/editline/readline.h
-    @cInclude("editline/readline.h");
-}) else struct {};
-
-const c_mpc = @cImport({
-    @cInclude("mpc.h");
-});
-
-fn readLine(prompt: [:0]const u8) [*c]u8 {
-    if (module_builtin.os.tag != .windows) {
-        const input: [*c]u8 = c_libedit.readline(prompt);
-        return input;
-    }
-
-    std.debug.print("{s}", .{prompt});
-
-    const stdin = std.io.getStdIn().reader();
-
-    var buffer: [1024]u8 = undefined;
-    const line = (stdin.readUntilDelimiterOrEof(&amp;buffer, '\n') catch unreachable).?;
-
-    const len = line.len;
-    const total_len = len + 1; // +1 for null terminator
-
-    const mem = std.c.malloc(total_len).?;
-    const out: [*c]u8 = @ptrCast(mem);
-
-    @memcpy(out[0..len], line);
-    out[len] = 0; // null terminator
-
-    return out;
-}
-
-fn addHistory(input: [*c]u8) void {
-    if (module_builtin.os.tag != .windows) {
-        _ = c_libedit.add_history(input);
-    }
-}
-
-fn eval_op(x: i64, op: [*:0]const u8, y: i64) i64 {
-    if (std.mem.eql(u8, std.mem.span(op), "+")) {
-        return x + y;
-    }
-    if (std.mem.eql(u8, std.mem.span(op), "-")) {
-        return x - y;
-    }
-    if (std.mem.eql(u8, std.mem.span(op), "*")) {
-        return x * y;
-    }
-    if (std.mem.eql(u8, std.mem.span(op), "/")) {
-        return @divTrunc(x, y);
-    }
-    return 0;
-}
-
-pub fn eval(t: *c_mpc.mpc_ast_t) i64 {
-    // number 노드인 경우 바로 값 반환
-    if (std.mem.indexOf(u8, std.mem.span(t.tag), "number") != null) {
-        return std.fmt.parseInt(i64, std.mem.span(t.contents), 10) catch 0;
-    }
-
-    // 연산자(op)는 두 번째 자식의 contents
-    const op = t.children[1].*.contents;
-
-    // 세 번째 자식을 먼저 계산
-    var x = eval(t.children[2]);
-
-    // 나머지 자식 노드를 반복하며 계산
-    var i: usize = 3;
-    while (i &lt; t.children_num and std.mem.indexOf(u8, std.mem.span(t.children[i].*.tag), "expr") != null) {
-        const right = eval(t.children[i]);
-        x = eval_op(x, op, right);
-        i += 1;
-    }
-
-    return x;
-}
-
-pub fn main() void {
-    const Number = c_mpc.mpc_new("number");
-    const Operator = c_mpc.mpc_new("operator");
-    const Expr = c_mpc.mpc_new("expr");
-    const Lispy = c_mpc.mpc_new("lispy");
-    defer c_mpc.mpc_cleanup(4, Number, Operator, Expr, Lispy);
-
-    const lang =
-        \\ number   : /-?[0-9]+/ ;
-        \\ operator : '+' | '-' | '*' | '/' ;
-        \\ expr     : &lt;number&gt; | '(' &lt;operator&gt; &lt;expr&gt;+ ')' ;
-        \\ lispy    : /^/ &lt;operator&gt; &lt;expr&gt;+ /$/ ;
-    ;
-
-    if (c_mpc.mpca_lang(c_mpc.MPCA_LANG_DEFAULT, lang, Number, Operator, Expr, Lispy) != 0) {
-        std.debug.print("Failed to define grammar\n", .{});
-        return;
-    }
-
-    std.debug.print("Lispy Version 0.0.0.0.2\n", .{});
-    std.debug.print("Press Ctrl+c to Exit\n\n", .{});
-
-    while (true) {
-        const input = readLine("lispy&gt; ");
-        defer std.c.free(input);
-
-        // Prepare result struct
-        var result: c_mpc.mpc_result_t = undefined;
-
-        if (c_mpc.mpc_parse("&lt;stdin&gt;", input, Lispy, &amp;result) != 0) {
-            const output: *c_mpc.mpc_ast_t = @ptrCast(@alignCast(result.output));
-            defer c_mpc.mpc_ast_delete(output);
-
-            const x = eval(output);
-            std.debug.print("{d}\n", .{x});
-        } else {
-            c_mpc.mpc_err_print(result.@"error");
-            c_mpc.mpc_err_delete(result.@"error");
-        }
-    }
-}
+<p>여기서는 mpc를 걷어내고 파서를 직접 제작한다.</p>
+<h2 id="srchand_rolled_parserzig"><a class="header" href="#srchand_rolled_parserzig">src/hand_rolled_parser.zig</a></h2>
+<pre><code class="language-zig">{{#include ../../lispy-zig/hand_rolled_parser/src/hand_rolled_parser.zig}}
 </code></pre>
 <h2 id="buildzig"><a class="header" href="#buildzig">build.zig</a></h2>
-<pre><code class="language-zig">const std = @import("std");
-
-pub fn build(b: *std.Build) void {
-    const target = b.standardTargetOptions(.{});
-    const optimize = b.standardOptimizeOption(.{});
-
-    const exe = b.addExecutable(.{
-        .name = "ch07",
-        .root_source_file = b.path("src/ch07.zig"),
-        .target = target,
-        .optimize = optimize,
-    });
-
-    { // library: editline
-        if (target.result.os.tag != .windows) {
-            if (target.result.os.tag == .linux) {
-                exe.addIncludePath(.{ .cwd_relative = "/usr/include/" });
-            } else if (target.result.os.tag == .macos) {
-                exe.addIncludePath(.{ .cwd_relative = "/opt/homebrew/include" });
-                exe.addLibraryPath(.{ .cwd_relative = "/opt/homebrew/lib" });
-            }
-            exe.linkSystemLibrary("edit");
-        }
-    }
-    { // library: mpc
-        exe.addIncludePath(.{ .cwd_relative = "../mpc/" });
-        exe.addCSourceFile(.{ .file = b.path("../mpc/mpc.c") });
-        exe.linkLibC();
-    }
-    exe.linkLibC();
-
-    // zig-out/bin/ 아래에 실행파일을 복사해 줌.
-    b.installArtifact(exe);
-
-    // zig build &lt;원하는 스탭이름&gt;을 하면 바이너리를 실행함.
-    const run_cmd = b.addRunArtifact(exe);
-    const run_step = b.step("run", "Run the application");
-    run_step.dependOn(&amp;run_cmd.step);
-}
+<pre><code class="language-zig">{{#include ../../lispy-zig/hand_rolled_parser/build.zig}}
 </code></pre>
 
                     </main>
 
                     <nav class="nav-wrapper" aria-label="Page navigation">
                         <!-- Mobile navigation buttons -->
-                            <a rel="prev" href="ch06.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                            <a rel="prev" href="ch16.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                                 <i class="fa fa-angle-left"></i>
                             </a>
 
-                            <a rel="next prefetch" href="ch08.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
-                                <i class="fa fa-angle-right"></i>
-                            </a>
 
                         <div style="clear: both"></div>
                     </nav>
@@ -401,13 +222,10 @@ pub fn build(b: *std.Build) void {
             </div>
 
             <nav class="nav-wide-wrapper" aria-label="Page navigation">
-                    <a rel="prev" href="ch06.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                    <a rel="prev" href="ch16.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                         <i class="fa fa-angle-left"></i>
                     </a>
 
-                    <a rel="next prefetch" href="ch08.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
-                        <i class="fa fa-angle-right"></i>
-                    </a>
             </nav>
 
         </div>
