--- a/ch01.html
+++ b/ch01.html
@@ -192,37 +192,16 @@
                     <main>
                         <h1 id="ch01"><a class="header" href="#ch01">ch01</a></h1>
 <ul>
-<li>
-<p><a href="https://www.buildyourownlisp.com/chapter1_introduction">origin</a></p>
-</li>
-<li>
-<p><a href="https://www.buildyourownlisp.com/">Build Your Own Lisp - Learn C and build your own programming language in 1000 lines of code!</a></p>
-<ul>
-<li><a href="https://github.com/orangeduck/BuildYourOwnLisp/tree/master/src">src</a></li>
-<li><a href="https://hn.algolia.com/?q=buildyourownlisp">https://hn.algolia.com/?q=buildyourownlisp</a></li>
-<li>Don’t Build Your Own Lisp
-<ul>
-<li><a href="https://gist.github.com/no-defun-allowed/7e3e238c959e27d4919bb4272487d7ad">https://gist.github.com/no-defun-allowed/7e3e238c959e27d4919bb4272487d7ad</a></li>
-<li><a href="https://news.ycombinator.com/item?id=27598424">https://news.ycombinator.com/item?id=27598424</a></li>
+<li><a href="https://www.buildyourownlisp.com/chapter1_introduction">origin</a></li>
 </ul>
-</li>
-</ul>
-</li>
-</ul>
-<p>chapter1_introduction
-목적
-c를 알고, lisp를 안다
-zig를 한번 테스트겸 lisp를 작성</p>
-<p>https://discord.com/invite/zig
-https://zig.guide/getting-started/running-tests
-https://zig.news/pm/zig-multi-project-workflow-in-vs-code-with-dynamic-debugbuild-and-one-tasksjson-to-rule-them-all-ka7</p>
-<p>:TODO console output test는 어떻게하지?</p>
-<p>https://rust-lang.github.io/mdBook/format/mdbook.html#including-files</p>
 
                     </main>
 
                     <nav class="nav-wrapper" aria-label="Page navigation">
                         <!-- Mobile navigation buttons -->
+                            <a rel="prev" href="zig.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                                <i class="fa fa-angle-left"></i>
+                            </a>
 
                             <a rel="next prefetch" href="ch02.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                                 <i class="fa fa-angle-right"></i>
@@ -234,6 +213,9 @@ https://zig.news/pm/zig-multi-project-workflow-in-vs-code-with-dynamic-debugbuil
             </div>
 
             <nav class="nav-wide-wrapper" aria-label="Page navigation">
+                    <a rel="prev" href="zig.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                        <i class="fa fa-angle-left"></i>
+                    </a>
 
                     <a rel="next prefetch" href="ch02.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                         <i class="fa fa-angle-right"></i>
