--- a/ch09.html
+++ b/ch09.html
@@ -194,16 +194,12 @@
 <ul>
 <li><a href="https://www.buildyourownlisp.com/chapter9_s_expressions">origin</a>
 <ul>
-<li>
-<p><a href="https://github.com/orangeduck/BuildYourOwnLisp/blob/master/src/s_expressions.c">s_expressions.c</a></p>
-</li>
-<li>
-<p>Chapter 9 • S-Expressions - 난이도 상승</p>
-</li>
+<li><a href="https://github.com/orangeduck/BuildYourOwnLisp/blob/master/src/s_expressions.c">s_expressions.c</a></li>
 </ul>
 </li>
 </ul>
-<p>어렵네</p>
+<h2 id=""><a class="header" href="#"></a></h2>
+<p>lval_take는 lval_pop하면서 자신을 삭제</p>
 <pre><code class="language-c">typedef struct lval {
   int type;
   long num;
@@ -225,9 +221,7 @@ mpca_lang(MPCA_LANG_DEFAULT,
   ",
   Number, Symbol, Sexpr, Expr, Lispy);
 </code></pre>
-<p>생성자 소멸자
-null terminated
-lval_take는 lval_pop하면서 자신을 삭제</p>
+<h2 id="c-함수-연습문제"><a class="header" href="#c-함수-연습문제">c 함수 연습문제</a></h2>
 <p>› 이 realloc함수는 무슨 역할을 하나요?
 › 이 memmove함수는 무슨 역할을 하나요?
 › 와 어떻게 memmove다른가요 memcpy?</p>
