deploy: b0b61a0274a0d8e4e611f9ba9d823ee00625128c

--- a/Index.html
+++ b/Index.html
@@ -38,6 +38,7 @@
         <link rel="stylesheet" id="ayu-highlight-css" href="ayu-highlight.css">
 
         <!-- Custom theme stylesheets -->
+        <link rel="stylesheet" href="theme/css/custom.css">
 
 
         <!-- Provide site root and default themes to javascript -->
@@ -194,33 +195,21 @@
 <ul>
 <li><a href="https://www.buildyourownlisp.com/">Build Your Own Lisp - Learn C and build your own programming language in 1000 lines of code!</a>
 <ul>
-<li><a href="https://github.com/orangeduck/BuildYourOwnLisp/tree/master/src">src</a></li>
-<li><a href="https://hn.algolia.com/?q=buildyourownlisp">https://hn.algolia.com/?q=buildyourownlisp</a></li>
-<li>Don’t Build Your Own Lisp
-<ul>
-<li><a href="https://gist.github.com/no-defun-allowed/7e3e238c959e27d4919bb4272487d7ad">https://gist.github.com/no-defun-allowed/7e3e238c959e27d4919bb4272487d7ad</a></li>
-<li><a href="https://news.ycombinator.com/item?id=27598424">https://news.ycombinator.com/item?id=27598424</a></li>
+<li><a href="https://github.com/orangeduck/BuildYourOwnLisp/">github</a></li>
 </ul>
 </li>
 </ul>
-</li>
-</ul>
-<p>c를 알고, lisp를 안다
-zig를 한번 테스트겸 lisp를 작성</p>
-<p>$ zig version
-0.14.1</p>
-<p>https://discord.com/invite/zig
-https://zig.guide/getting-started/running-tests
-https://zig.news/pm/zig-multi-project-workflow-in-vs-code-with-dynamic-debugbuild-and-one-tasksjson-to-rule-them-all-ka7</p>
-<p>:TODO console output test는 어떻게하지?</p>
-<p>https://rust-lang.github.io/mdBook/format/mdbook.html#including-files</p>
+<p>Build Your Own Lisp가 c로 구현되어 있는데, zig로 한번 구현해보자.</p>
+<pre><code class="language-sh">$ zig version
+0.14.1
+</code></pre>
 
                     </main>
 
                     <nav class="nav-wrapper" aria-label="Page navigation">
                         <!-- Mobile navigation buttons -->
 
-                            <a rel="next prefetch" href="zig.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                            <a rel="next prefetch" href="ch01.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                                 <i class="fa fa-angle-right"></i>
                             </a>
 
@@ -231,7 +220,7 @@ https://zig.news/pm/zig-multi-project-workflow-in-vs-code-with-dynamic-debugbuil
 
             <nav class="nav-wide-wrapper" aria-label="Page navigation">
 
-                    <a rel="next prefetch" href="zig.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                    <a rel="next prefetch" href="ch01.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                         <i class="fa fa-angle-right"></i>
                     </a>
             </nav>
