--- a/ch06.html
+++ b/ch06.html
@@ -3,7 +3,7 @@
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
-        <title>ch06 - buildyourownlisp-by-zig</title>
+        <title>ch06 mpc_ast_print - buildyourownlisp-by-zig</title>
 
 
         <!-- Custom HTML head -->
@@ -38,6 +38,7 @@
         <link rel="stylesheet" id="ayu-highlight-css" href="ayu-highlight.css">
 
         <!-- Custom theme stylesheets -->
+        <link rel="stylesheet" href="theme/css/custom.css">
 
 
         <!-- Provide site root and default themes to javascript -->
@@ -198,7 +199,7 @@
 </ul>
 </li>
 </ul>
-<h2 id=""><a class="header" href="#"></a></h2>
+<h2 id="0x00"><a class="header" href="#0x00">0x00</a></h2>
 <ul>
 <li>6장 mpc_parse로 mpc_result_t 를 얻어 mpc_ast_print로 출력</li>
 <li>mpc문법: 슬래시(/) 사이에 mpc정규 표현식을 넣어 작성</li>
