--- a/ch07.html
+++ b/ch07.html
@@ -3,7 +3,7 @@
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
-        <title>ch07 - buildyourownlisp-by-zig</title>
+        <title>ch07 eval() - buildyourownlisp-by-zig</title>
 
 
         <!-- Custom HTML head -->
@@ -38,6 +38,7 @@
         <link rel="stylesheet" id="ayu-highlight-css" href="ayu-highlight.css">
 
         <!-- Custom theme stylesheets -->
+        <link rel="stylesheet" href="theme/css/custom.css">
 
 
         <!-- Provide site root and default themes to javascript -->
@@ -198,7 +199,7 @@
 </ul>
 </li>
 </ul>
-<h2 id=""><a class="header" href="#"></a></h2>
+<h2 id="0x00"><a class="header" href="#0x00">0x00</a></h2>
 <p>파싱된 mpc_ast_t 를 가지고 children을 방문하면서 계산을 함.</p>
 <pre><code class="language-sh">Lispy Version 0.0.0.0.3
 Press Ctrl+c to Exit
