--- a/ch08.html
+++ b/ch08.html
@@ -3,7 +3,7 @@
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
-        <title>ch08 - buildyourownlisp-by-zig</title>
+        <title>ch08 Lval 구조체 - buildyourownlisp-by-zig</title>
 
 
         <!-- Custom HTML head -->
@@ -38,6 +38,7 @@
         <link rel="stylesheet" id="ayu-highlight-css" href="ayu-highlight.css">
 
         <!-- Custom theme stylesheets -->
+        <link rel="stylesheet" href="theme/css/custom.css">
 
 
         <!-- Provide site root and default themes to javascript -->
@@ -198,7 +199,7 @@
 </ul>
 </li>
 </ul>
-<h2 id=""><a class="header" href="#"></a></h2>
+<h2 id="0x00"><a class="header" href="#0x00">0x00</a></h2>
 <p>Lval을 정의하여 숫자와 에러를 다루도록 합.</p>
 <h2 id="srcch08zig"><a class="header" href="#srcch08zig">src/ch08.zig</a></h2>
 <pre><code class="language-zig">const std = @import("std");
