--- a/ch09.html
+++ b/ch09.html
@@ -3,7 +3,7 @@
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
-        <title>ch09 - buildyourownlisp-by-zig</title>
+        <title>ch09 S-Expression - buildyourownlisp-by-zig</title>
 
 
         <!-- Custom HTML head -->
@@ -38,6 +38,7 @@
         <link rel="stylesheet" id="ayu-highlight-css" href="ayu-highlight.css">
 
         <!-- Custom theme stylesheets -->
+        <link rel="stylesheet" href="theme/css/custom.css">
 
 
         <!-- Provide site root and default themes to javascript -->
@@ -198,7 +199,7 @@
 </ul>
 </li>
 </ul>
-<h2 id=""><a class="header" href="#"></a></h2>
+<h2 id="0x00"><a class="header" href="#0x00">0x00</a></h2>
 <p>lval_take는 lval_pop하면서 자신을 삭제</p>
 <pre><code class="language-c">typedef struct lval {
   int type;
@@ -221,7 +222,7 @@ mpca_lang(MPCA_LANG_DEFAULT,
   ",
   Number, Symbol, Sexpr, Expr, Lispy);
 </code></pre>
-<h2 id="c-함수-연습문제"><a class="header" href="#c-함수-연습문제">c 함수 연습문제</a></h2>
+<h2 id="todo-c-함수-연습문제"><a class="header" href="#todo-c-함수-연습문제">TODO c 함수 연습문제</a></h2>
 <p>› 이 realloc함수는 무슨 역할을 하나요?
 › 이 memmove함수는 무슨 역할을 하나요?
 › 와 어떻게 memmove다른가요 memcpy?</p>
