--- a/ch10.html
+++ b/ch10.html
@@ -3,7 +3,7 @@
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
-        <title>ch10 - buildyourownlisp-by-zig</title>
+        <title>ch10 Q-Expression - buildyourownlisp-by-zig</title>
 
 
         <!-- Custom HTML head -->
@@ -38,6 +38,7 @@
         <link rel="stylesheet" id="ayu-highlight-css" href="ayu-highlight.css">
 
         <!-- Custom theme stylesheets -->
+        <link rel="stylesheet" href="theme/css/custom.css">
 
 
         <!-- Provide site root and default themes to javascript -->
@@ -198,7 +199,7 @@
 </ul>
 </li>
 </ul>
-<h2 id=""><a class="header" href="#"></a></h2>
+<h2 id="0x00"><a class="header" href="#0x00">0x00</a></h2>
 <ul>
 <li>Q-Expressions: 인용된 표현식(quoted expression)을 의미하며, 표준 Lisp 메커니즘으로 계산되지 않는 Lisp 표현식의 한 유형
 <ul>
