--- a/ch16.html
+++ b/ch16.html
@@ -3,7 +3,7 @@
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
-        <title>ch16 - buildyourownlisp-by-zig</title>
+        <title>ch16 보너스 - buildyourownlisp-by-zig</title>
 
 
         <!-- Custom HTML head -->
@@ -38,6 +38,7 @@
         <link rel="stylesheet" id="ayu-highlight-css" href="ayu-highlight.css">
 
         <!-- Custom theme stylesheets -->
+        <link rel="stylesheet" href="theme/css/custom.css">
 
 
         <!-- Provide site root and default themes to javascript -->
@@ -192,19 +193,12 @@
                     <main>
                         <h1 id="ch16"><a class="header" href="#ch16">ch16</a></h1>
 <ul>
-<li>https://www.buildyourownlisp.com/chapter16_bonus_projects</li>
-<li>https://www.buildyourownlisp.com/appendix_a_hand_rolled_parser
+<li><a href="https://www.buildyourownlisp.com/chapter16_bonus_projects">origin</a></li>
+</ul>
+<h2 id="0x00"><a class="header" href="#0x00">0x00</a></h2>
 <ul>
-<li><a href="https://github.com/orangeduck/BuildYourOwnLisp/blob/master/src/hand_rolled_parser.c">hand_rolled_parser.c</a></li>
+<li>lispy를 더 확장시키기 위한 아이디어들 소개</li>
 </ul>
-</li>
-</ul>
-<h2 id="srcch16zig"><a class="header" href="#srcch16zig">src/ch16.zig</a></h2>
-<pre><code class="language-zig">{{#include ../../lispy-zig/ch16/src/ch16.zig}}
-</code></pre>
-<h2 id="buildzig"><a class="header" href="#buildzig">build.zig</a></h2>
-<pre><code class="language-zig">{{#include ../../lispy-zig/ch16/build.zig}}
-</code></pre>
 
                     </main>
 
