--- a/ch01.html
+++ b/ch01.html
@@ -3,7 +3,7 @@
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
-        <title>ch01 - buildyourownlisp-by-zig</title>
+        <title>ch01 들어가며 - buildyourownlisp-by-zig</title>
 
 
         <!-- Custom HTML head -->
@@ -38,6 +38,7 @@
         <link rel="stylesheet" id="ayu-highlight-css" href="ayu-highlight.css">
 
         <!-- Custom theme stylesheets -->
+        <link rel="stylesheet" href="theme/css/custom.css">
 
 
         <!-- Provide site root and default themes to javascript -->
@@ -194,12 +195,21 @@
 <ul>
 <li><a href="https://www.buildyourownlisp.com/chapter1_introduction">origin</a></li>
 </ul>
+<h2 id="0x00"><a class="header" href="#0x00">0x00</a></h2>
+<ul>
+<li>책이 누구를 위한 것인지, 왜 c로 lisp를 만드는지.</li>
+</ul>
+<h2 id="나는"><a class="header" href="#나는">나는?</a></h2>
+<ul>
+<li>c를 알고, lisp를 알고있다.</li>
+<li>lisp를 만들어봐야지 하는 생각만 하다 zig를 한번 테스트겸 lisp를 작성.</li>
+</ul>
 
                     </main>
 
                     <nav class="nav-wrapper" aria-label="Page navigation">
                         <!-- Mobile navigation buttons -->
-                            <a rel="prev" href="zig.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                            <a rel="prev" href="Index.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                                 <i class="fa fa-angle-left"></i>
                             </a>
 
@@ -213,7 +223,7 @@
             </div>
 
             <nav class="nav-wide-wrapper" aria-label="Page navigation">
-                    <a rel="prev" href="zig.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                    <a rel="prev" href="Index.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                         <i class="fa fa-angle-left"></i>
                     </a>
 
