--- a/ch03.html
+++ b/ch03.html
@@ -3,7 +3,7 @@
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
-        <title>ch03 - buildyourownlisp-by-zig</title>
+        <title>ch03 기초 - buildyourownlisp-by-zig</title>
 
 
         <!-- Custom HTML head -->
@@ -38,6 +38,7 @@
         <link rel="stylesheet" id="ayu-highlight-css" href="ayu-highlight.css">
 
         <!-- Custom theme stylesheets -->
+        <link rel="stylesheet" href="theme/css/custom.css">
 
 
         <!-- Provide site root and default themes to javascript -->
@@ -194,9 +195,20 @@
 <ul>
 <li><a href="https://www.buildyourownlisp.com/chapter3_basics">origin</a></li>
 </ul>
-<p>chapter3_basics
-기본 타입들</p>
-<p>https://ziglang.org/documentation/master/#toc-Primitive-Types</p>
+<h2 id="0x00"><a class="header" href="#0x00">0x00</a></h2>
+<ul>
+<li>기본 타입들</li>
+<li>함수 정의</li>
+<li>구조체 정의</li>
+<li>포인터</li>
+<li>문자열</li>
+<li>조건문</li>
+<li>루프</li>
+</ul>
+<h2 id="zig"><a class="header" href="#zig">zig?</a></h2>
+<ul>
+<li><a href="https://ziglang.org/documentation/master/#toc-Primitive-Types">https://ziglang.org/documentation/master/#toc-Primitive-Types</a></li>
+</ul>
 <h2 id="srcch03zig"><a class="header" href="#srcch03zig">src/ch03.zig</a></h2>
 <pre><code class="language-zig">const std = @import("std");
 
