--- a/ch04.html
+++ b/ch04.html
@@ -3,7 +3,7 @@
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
-        <title>ch04 - buildyourownlisp-by-zig</title>
+        <title>ch04 libedit 사용 - buildyourownlisp-by-zig</title>
 
 
         <!-- Custom HTML head -->
@@ -38,6 +38,7 @@
         <link rel="stylesheet" id="ayu-highlight-css" href="ayu-highlight.css">
 
         <!-- Custom theme stylesheets -->
+        <link rel="stylesheet" href="theme/css/custom.css">
 
 
         <!-- Provide site root and default themes to javascript -->
@@ -198,22 +199,11 @@
 </ul>
 </li>
 </ul>
-<h2 id=""><a class="header" href="#"></a></h2>
+<h2 id="0x00"><a class="header" href="#0x00">0x00</a></h2>
 <ul>
 <li>libedit을 사용하여 입력 히스토리를 저장.</li>
 <li>while루프를 돌면서 사용자와 인터렉티브 환경</li>
 </ul>
-<h2 id="zig-타입"><a class="header" href="#zig-타입">Zig 타입</a></h2>
-<div class="table-wrapper"><table><thead><tr><th>Zig 타입</th><th>C와의 대응</th><th>의미</th></tr></thead><tbody>
-<tr><td>u8</td><td>uint8_t 혹은 std::byte</td><td>unsigned 8-bit integer</td></tr>
-<tr><td><code>*u8</code></td><td><code>uint8_t*</code></td><td>단일 <code>u8</code>을 가리키는 포인터</td></tr>
-<tr><td><code>[]u8</code></td><td>C에는 직접 대응 없음 (Zig 슬라이스)</td><td>길이 포함한 슬라이스</td></tr>
-<tr><td><code>[*]u8</code></td><td>없음 (Zig 내부용)</td><td>길이 모르는 raw pointer</td></tr>
-<tr><td><code>[:0]u8</code></td><td><code>const char*</code></td><td>null-terminated C string (읽기 전용)</td></tr>
-<tr><td><code>[*c]u8</code></td><td><code>uint8_t*</code> 또는 <code>char*</code></td><td>C 호환 raw pointer</td></tr>
-<tr><td><code>*const [N]u8</code></td><td><code>const uint8_t[N]*</code></td><td>길이 고정된 배열의 포인터</td></tr>
-</tbody></table>
-</div>
 <h2 id="libedit"><a class="header" href="#libedit">libedit</a></h2>
 <h3 id="ubuntu"><a class="header" href="#ubuntu">Ubuntu</a></h3>
 <pre><code class="language-sh">snap install zig --classic --beta
