--- a/ch11.html
+++ b/ch11.html
@@ -3,7 +3,7 @@
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
-        <title>ch11 - buildyourownlisp-by-zig</title>
+        <title>ch11 Lenv 구조체 - buildyourownlisp-by-zig</title>
 
 
         <!-- Custom HTML head -->
@@ -38,6 +38,7 @@
         <link rel="stylesheet" id="ayu-highlight-css" href="ayu-highlight.css">
 
         <!-- Custom theme stylesheets -->
+        <link rel="stylesheet" href="theme/css/custom.css">
 
 
         <!-- Provide site root and default themes to javascript -->
@@ -198,7 +199,7 @@
 </ul>
 </li>
 </ul>
-<h2 id=""><a class="header" href="#"></a></h2>
+<h2 id="0x00"><a class="header" href="#0x00">0x00</a></h2>
 <pre><code class="language-txt">// c
   "
   symbol : /[a-zA-Z0-9_+\\-*\\/\\\\=&lt;&gt;!&amp;]+/ ;         \
@@ -210,7 +211,8 @@
     \\
 </code></pre>
 <pre><code class="language-zig">const lbuiltin = fn(env: *lenv, val: *lval) *lval;
-Fun: *const lbuiltin,
+
+BuiltinOrNull: ?*const lbuiltin = null,
 </code></pre>
 <h2 id="srcch11zig"><a class="header" href="#srcch11zig">src/ch11.zig</a></h2>
 <pre><code class="language-zig">const std = @import("std");
@@ -872,11 +874,11 @@ pub fn main() void {
         return;
     }
 
-    std.debug.print("Lispy Version 0.0.0.0.2\n", .{});
-    std.debug.print("Press Ctrl+c to Exit\n\n", .{});
-
     const env = Lenv.Init();
     lenv_add_builtins(env);
+
+    std.debug.print("Lispy Version 0.0.0.0.2\n", .{});
+    std.debug.print("Press Ctrl+c to Exit\n\n", .{});
 
     while (true) {
         const input: [*c]u8 = readLine("lispy&gt; ");
