--- a/ch12.html
+++ b/ch12.html
@@ -3,7 +3,7 @@
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
-        <title>ch12 - buildyourownlisp-by-zig</title>
+        <title>ch12 def - buildyourownlisp-by-zig</title>
 
 
         <!-- Custom HTML head -->
@@ -38,6 +38,7 @@
         <link rel="stylesheet" id="ayu-highlight-css" href="ayu-highlight.css">
 
         <!-- Custom theme stylesheets -->
+        <link rel="stylesheet" href="theme/css/custom.css">
 
 
         <!-- Provide site root and default themes to javascript -->
@@ -198,10 +199,15 @@
 </ul>
 </li>
 </ul>
-<h2 id=""><a class="header" href="#"></a></h2>
-<p>def {add-together} (\ {x y} {+ x y})
-add-together 10 20</p>
-<p>lispy&gt; def {add-mul} (\ {x y} {+ x (* x y)})
+<h2 id="0x00"><a class="header" href="#0x00">0x00</a></h2>
+<ul>
+<li>함수 정의</li>
+</ul>
+<h2 id="repl"><a class="header" href="#repl">repl</a></h2>
+<pre><code class="language-sh">def {add-together} (\ {x y} {+ x y})
+add-together 10 20
+
+lispy&gt; def {add-mul} (\ {x y} {+ x (* x y)})
 ()
 lispy&gt; add-mul 10 20
 210
@@ -211,7 +217,8 @@ lispy&gt; def {add-mul-ten} (add-mul 10)
 ()
 lispy&gt; add-mul-ten 50
 510
-lispy&gt;</p>
+lispy&gt;
+</code></pre>
 <pre><code class="language-txt">def {fun} (\ {args body} {def (head args) (\ (tail args) body)})
 fun {unpack f xs} {eval (join (list f) xs)}
 fun {pack f &amp; xs} {f xs}
@@ -1061,11 +1068,11 @@ pub fn main() void {
         return;
     }
 
-    std.debug.print("Lispy Version 0.0.0.0.2\n", .{});
-    std.debug.print("Press Ctrl+c to Exit\n\n", .{});
-
     const env = Lenv.Init();
     lenv_add_builtins(env);
+
+    std.debug.print("Lispy Version 0.0.0.0.2\n", .{});
+    std.debug.print("Press Ctrl+c to Exit\n\n", .{});
 
     while (true) {
         const input: [*c]u8 = readLine("lispy&gt; ");
