--- a/ch15.html
+++ b/ch15.html
@@ -3,7 +3,7 @@
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
-        <title>ch15 - buildyourownlisp-by-zig</title>
+        <title>ch15 prelude - buildyourownlisp-by-zig</title>
 
 
         <!-- Custom HTML head -->
@@ -38,6 +38,7 @@
         <link rel="stylesheet" id="ayu-highlight-css" href="ayu-highlight.css">
 
         <!-- Custom theme stylesheets -->
+        <link rel="stylesheet" href="theme/css/custom.css">
 
 
         <!-- Provide site root and default themes to javascript -->
@@ -198,8 +199,15 @@
 </ul>
 </li>
 </ul>
-<h2 id=""><a class="header" href="#"></a></h2>
-<p>prelude.lspy를 불러와봄</p>
+<h2 id="0x00"><a class="header" href="#0x00">0x00</a></h2>
+<ul>
+<li>prelude.lspy를 불러와봄
+<ul>
+<li>prelude: 서곡</li>
+<li>기본 제공되는 최소한의 도구 모음</li>
+</ul>
+</li>
+</ul>
 <h2 id="srcch15zig"><a class="header" href="#srcch15zig">src/ch15.zig</a></h2>
 <pre><code class="language-zig">const std = @import("std");
 const module_builtin = @import("builtin");
@@ -1312,14 +1320,14 @@ pub fn main() void {
         return;
     }
 
-    std.debug.print("Lispy Version 0.0.0.0.2\n", .{});
-    std.debug.print("Press Ctrl+c to Exit\n\n", .{});
-
     const env = Lenv.Init();
     lenv_add_builtins(env);
 
     const argc = args.len;
     if (argc == 1) {
+        std.debug.print("Lispy Version 0.0.0.0.2\n", .{});
+        std.debug.print("Press Ctrl+c to Exit\n\n", .{});
+
         while (true) {
             const input: [*c]u8 = readLine("lispy&gt; ");
             defer std.c.free(input);
