deploy: 6081df2d473c6fa7623681a7a74a4abc03f8e636

--- a/ch01.html
+++ b/ch01.html
@@ -3,7 +3,7 @@
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
-        <title>ch01 들어가며 - buildyourownlisp-by-zig</title>
+        <title>01. 들어가며 - buildyourownlisp-by-zig</title>
 
 
         <!-- Custom HTML head -->
