--- a/ch03.html
+++ b/ch03.html
@@ -3,7 +3,7 @@
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
-        <title>ch03 기초 - buildyourownlisp-by-zig</title>
+        <title>03. 기초 - buildyourownlisp-by-zig</title>
 
 
         <!-- Custom HTML head -->
