--- a/ch04.html
+++ b/ch04.html
@@ -3,7 +3,7 @@
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
-        <title>ch04 libedit 사용 - buildyourownlisp-by-zig</title>
+        <title>04. libedit 사용 - buildyourownlisp-by-zig</title>
 
 
         <!-- Custom HTML head -->
