--- a/ch06.html
+++ b/ch06.html
@@ -3,7 +3,7 @@
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
-        <title>ch06 mpc_ast_print - buildyourownlisp-by-zig</title>
+        <title>06. mpc_ast_print - buildyourownlisp-by-zig</title>
 
 
         <!-- Custom HTML head -->
