--- a/ch08.html
+++ b/ch08.html
@@ -3,7 +3,7 @@
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
-        <title>ch08 Lval 구조체 - buildyourownlisp-by-zig</title>
+        <title>08. Lval 구조체 - buildyourownlisp-by-zig</title>
 
 
         <!-- Custom HTML head -->
