--- a/ch11.html
+++ b/ch11.html
@@ -3,7 +3,7 @@
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
-        <title>ch11 Lenv 구조체 - buildyourownlisp-by-zig</title>
+        <title>11. Lenv 구조체 - buildyourownlisp-by-zig</title>
 
 
         <!-- Custom HTML head -->
