--- a/ch16.html
+++ b/ch16.html
@@ -3,7 +3,7 @@
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
-        <title>ch16 보너스 - buildyourownlisp-by-zig</title>
+        <title>16. 보너스 - buildyourownlisp-by-zig</title>
 
 
         <!-- Custom HTML head -->
