--- a/appendix_a_hand_rolled_parser.html
+++ b/appendix_a_hand_rolled_parser.html
@@ -3,7 +3,7 @@
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
-        <title>부록 - 파서 직접 작성 - buildyourownlisp-by-zig</title>
+        <title>부록. 파서 직접 작성 - buildyourownlisp-by-zig</title>
 
 
         <!-- Custom HTML head -->
