--- a/ch12.html
+++ b/ch12.html
@@ -3,7 +3,7 @@
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
-        <title>ch12 def - buildyourownlisp-by-zig</title>
+        <title>12. def - buildyourownlisp-by-zig</title>
 
 
         <!-- Custom HTML head -->
