--- a/ch13.html
+++ b/ch13.html
@@ -3,7 +3,7 @@
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
-        <title>ch13 비교 - buildyourownlisp-by-zig</title>
+        <title>13. 비교 - buildyourownlisp-by-zig</title>
 
 
         <!-- Custom HTML head -->
