--- a/ch14.html
+++ b/ch14.html
@@ -3,7 +3,7 @@
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
-        <title>ch14 문자열 - buildyourownlisp-by-zig</title>
+        <title>14. 문자열 - buildyourownlisp-by-zig</title>
 
 
         <!-- Custom HTML head -->
