--- a/ch15.html
+++ b/ch15.html
@@ -3,7 +3,7 @@
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
-        <title>ch15 prelude - buildyourownlisp-by-zig</title>
+        <title>15. prelude - buildyourownlisp-by-zig</title>
 
 
         <!-- Custom HTML head -->
